Categories refactoring; add possibility to add posters

--- a/app/src/main/res/layout/entry_row_item.xml
+++ b/app/src/main/res/layout/entry_row_item.xml
@@ -2,11 +2,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="horizontal"
     xmlns:tools="http://schemas.android.com/tools">
 
     <TextView
-        tools:text="sample name"
         android:id="@+id/entryNameTv"
+        android:layout_gravity="center"
+        tools:text="sample name"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_weight="0.9"
+        />
+
+    <ImageView
+        android:id="@+id/posterIv"
+        android:layout_weight="0.1"
+        android:layout_gravity="right"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        tools:ignore="RtlHardcoded" />
 </LinearLayout>
