--- a/app/src/main/res/layout/add_entry_dialog.xml
+++ b/app/src/main/res/layout/add_entry_dialog.xml
@@ -48,23 +48,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:hint="@string/genre"
-        android:paddingStart="4dp"
-        android:paddingEnd="4dp"
-        app:endIconMode="clear_text"
-        app:hintAnimationEnabled="true"
-        app:hintEnabled="true">
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/genreEt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="text" />
-    </com.google.android.material.textfield.TextInputLayout>
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:hint="@string/year"
         android:paddingStart="4dp"
         android:paddingEnd="4dp"
@@ -108,4 +91,11 @@
         android:layout_marginStart="4dp"
         android:layout_marginEnd="4dp"
         android:layout_marginTop="10dp"/>
+
+    <Button
+        android:id="@+id/genreBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cornerRadius="3dp"
+        android:text="@string/genre" />
 </LinearLayout>
