--- a/feature/movies_suggestions/sample/src/main/res/layout/fragment_main.xml
+++ b/feature/movies_suggestions/sample/src/main/res/layout/fragment_main.xml
@@ -20,6 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Send request"
+        android:layout_gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
