--- a/feature/movies_suggestions/sample/src/main/res/layout/fragment_main.xml
+++ b/feature/movies_suggestions/sample/src/main/res/layout/fragment_main.xml
@@ -8,22 +8,20 @@
     android:orientation="vertical"
     tools:context=".ui.main.MainFragment">
 
-    <EditText
+    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
         android:id="@+id/enterMovieNameEt"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <requestFocus />
-    </EditText>
+        android:layout_height="wrap_content" />
 
     <Button
         android:id="@+id/sendRequestBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Send request"
         android:layout_gravity="center"
+        android:text="Search"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="HardcodedText" />
 </LinearLayout>
