--- a/feature/suggestions/sample/src/main/res/layout/fragment_movie_preview.xml
+++ b/feature/suggestions/sample/src/main/res/layout/fragment_movie_preview.xml
@@ -4,37 +4,58 @@
     android:id="@+id/main"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    tools:context=".ui.main.MainFragment"
     android:layout_margin="10dp"
-    android:gravity="center">
+    android:gravity="center"
+    android:orientation="vertical"
+    tools:context=".ui.main.MainFragment">
 
     <ImageView
         android:id="@+id/posterIv"
         android:layout_width="100dp"
         android:layout_height="100dp"
         tools:background="@color/black"
-        tools:src="@drawable/ic_launcher_foreground"
-        tools:ignore="ContentDescription" />
+        tools:ignore="ContentDescription"
+        tools:src="@drawable/ic_launcher_foreground" />
 
     <TextView
         android:id="@+id/titleTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="Sample Title"/>
+        tools:text="Sample Title" />
+
     <TextView
         android:id="@+id/yearTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="2050"/>
+        tools:text="2050" />
+
     <TextView
         android:id="@+id/genresTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="ACTION"/>
+        tools:text="ACTION" />
+
     <TextView
         android:id="@+id/countriesTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="DE, RU, EE"/>
+        tools:text="DE, RU, EE" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:id="@+id/cancelBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@android:string/cancel" />
+
+        <Button
+            android:id="@+id/importBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:text="Import" />
+    </LinearLayout>
 </LinearLayout>
