--- a/feature/suggestions/sample/src/main/res/layout/fragment_main.xml
+++ b/feature/suggestions/sample/src/main/res/layout/fragment_main.xml
@@ -7,11 +7,9 @@
     android:orientation="vertical"
     tools:context=".ui.main.MainFragment">
 
-    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
-        android:id="@+id/enterMovieNameEt"
+    <dev.liinahamari.suggestions_ui.SearchMovieAutoCompleteTextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
         <requestFocus />
-    </androidx.appcompat.widget.AppCompatAutoCompleteTextView>
+    </dev.liinahamari.suggestions_ui.SearchMovieAutoCompleteTextView>
 </LinearLayout>
