--- a/feature/suggestions/suggestions-ui/src/main/res/layout/fragment_movie_preview.xml
+++ b/feature/suggestions/suggestions-ui/src/main/res/layout/fragment_movie_preview.xml
@@ -4,18 +4,15 @@
     android:id="@+id/main"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp"
+    android:padding="20dp"
     android:gravity="center"
-    android:orientation="vertical"
-    tools:context=".ui.main.MainFragment">
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/posterIv"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        tools:background="@color/black"
-        tools:ignore="ContentDescription"
-        tools:src="@drawable/ic_launcher_foreground" />
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@+id/titleTv"
