--- a/feature/suggestions/sample/src/main/res/layout/fragment_main.xml
+++ b/feature/suggestions/sample/src/main/res/layout/fragment_main.xml
@@ -9,7 +9,8 @@
 
     <dev.liinahamari.suggestions_ui.SearchMovieAutoCompleteTextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:completionThreshold="1">
         <requestFocus />
     </dev.liinahamari.suggestions_ui.SearchMovieAutoCompleteTextView>
 </LinearLayout>
