--- a/feature/entity-list/list-ui/src/main/res/layout/fragment_add_entry.xml
+++ b/feature/entity-list/list-ui/src/main/res/layout/fragment_add_entry.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginBottom="10dp"
+    android:padding="20dp"
     android:orientation="vertical">
 
     <dev.liinahamari.suggestions_ui.SearchMovieAutoCompleteTextView
@@ -68,14 +69,14 @@
         app:endIconMode="clear_text"
         app:hintAnimationEnabled="true"
         app:hintEnabled="true">
-        <com.google.android.material.textfield.TextInputEditText
+        <dev.liinahamari.list_ui.single_entity.add_dialogs.UrlValidatingEditText
             android:id="@+id/posterUrlEt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:focusableInTouchMode="true"
             android:focusable="true"
             android:ems="10"
-            android:inputType="textUri" />
+            android:inputType="text" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
@@ -96,13 +97,4 @@
         android:layout_marginEnd="4dp"
         app:cornerRadius="3dp"
         android:text="@string/genre" />
-
-    <Button
-        android:id="@+id/saveBtn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginEnd="4dp"
-        app:cornerRadius="3dp"
-        android:text="@string/save" />
 </LinearLayout>
