--- a/feature/entity-list/list-ui/src/main/res/layout/entry_row_item.xml
+++ b/feature/entity-list/list-ui/src/main/res/layout/entry_row_item.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_margin="4dp"
     app:cardBackgroundColor="@color/cardview_dark_background"
     app:cardCornerRadius="4dp">
@@ -13,19 +13,46 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/entryNameTv"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_gravity="center_horizontal"
             android:layout_weight="0.9"
-            tools:text="sample name" />
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/entryNameTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:textSize="18sp"
+                android:layout_gravity="center_horizontal"
+                tools:text="sample name" />
+
+            <TextView
+                android:id="@+id/entryDescriptionTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="sample description\nsample description\nsample description" />
+
+            <TextView
+                android:id="@+id/entryGenresTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="[HISTORY, COMEDY]" />
+
+            <TextView
+                android:id="@+id/entryCountriesTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="[UK, AR]" />
+        </LinearLayout>
 
         <ImageView
             android:id="@+id/posterIv"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_gravity="right"
+            android:layout_gravity="center"
             android:layout_weight="0.1"
             tools:ignore="ContentDescription,RtlHardcoded" />
     </LinearLayout>
