Autosuggestions for Documentaries search

--- a/feature/suggestions/sample/src/main/res/layout/fragment_main.xml
+++ b/feature/suggestions/sample/src/main/res/layout/fragment_main.xml
@@ -7,10 +7,10 @@
     android:orientation="vertical"
     tools:context=".ui.main.MainFragment">
 
-    <dev.liinahamari.suggestions_ui.SearchMovieAutoCompleteTextView
+    <dev.liinahamari.suggestions_ui.movie.SearchMovieAutoCompleteTextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:completionThreshold="1">
         <requestFocus />
-    </dev.liinahamari.suggestions_ui.SearchMovieAutoCompleteTextView>
+    </dev.liinahamari.suggestions_ui.movie.SearchMovieAutoCompleteTextView>
 </LinearLayout>
