--- a/feature/entity-list/list-ui/src/main/res/layout/fragment_add_documentary.xml
+++ b/feature/entity-list/list-ui/src/main/res/layout/fragment_add_documentary.xml
@@ -7,8 +7,8 @@
     android:padding="20dp"
     android:orientation="vertical">
 
-    <dev.liinahamari.suggestions_ui.SearchMovieAutoCompleteTextView
-        android:id="@+id/nameEt"
+    <dev.liinahamari.suggestions_ui.documentary.SearchDocumentaryAutoCompleteTextView
+        android:id="@+id/titleEt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -19,27 +19,7 @@
         app:hintAnimationEnabled="true"
         app:hintEnabled="true">
         <requestFocus />
-    </dev.liinahamari.suggestions_ui.SearchMovieAutoCompleteTextView>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/authorEtContainer"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:hint="@string/author"
-        android:paddingStart="4dp"
-        android:paddingEnd="4dp"
-        app:endIconMode="clear_text"
-        android:visibility="gone"
-        app:hintAnimationEnabled="true"
-        app:hintEnabled="true">
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/authorEt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textCapWords" />
-    </com.google.android.material.textfield.TextInputLayout>
+    </dev.liinahamari.suggestions_ui.documentary.SearchDocumentaryAutoCompleteTextView>
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
@@ -69,7 +49,7 @@
         app:endIconMode="clear_text"
         app:hintAnimationEnabled="true"
         app:hintEnabled="true">
-        <dev.liinahamari.list_ui.single_entity.add_dialogs.UrlValidatingEditText
+        <dev.liinahamari.list_ui.custom_views.UrlValidatingEditText
             android:id="@+id/posterUrlEt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -88,13 +68,4 @@
         android:layout_marginStart="4dp"
         android:layout_marginEnd="4dp"
         android:layout_marginTop="10dp"/>
-
-    <Button
-        android:id="@+id/genreBtn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginEnd="4dp"
-        app:cornerRadius="3dp"
-        android:text="@string/genre" />
 </LinearLayout>
