--- a/feature/entity-list/list-ui/src/main/res/layout/fragment_category.xml
+++ b/feature/entity-list/list-ui/src/main/res/layout/fragment_category.xml
@@ -7,12 +7,26 @@
     android:background="@color/black"
     tools:context="dev.liinahamari.list_ui.MainActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/entriesRv"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:context="dev.liinahamari.list_ui.tabs.ViewPagerPlaceholderFragment" />
+        android:background="@color/black"
+        android:orientation="vertical"
+        tools:context="dev.liinahamari.list_ui.MainActivity">
+
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/searchView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:closeIcon="@android:drawable/ic_menu_close_clear_cancel" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/entriesRv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+    </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
