--- a/feature/entity-list/list-ui/src/main/res/layout/entry_row_item.xml
+++ b/feature/entity-list/list-ui/src/main/res/layout/entry_row_item.xml
@@ -11,6 +11,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:orientation="horizontal">
 
         <LinearLayout
@@ -21,12 +22,12 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/entryNameTv"
+                android:id="@+id/titleTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="5dp"
                 android:textSize="18sp"
-                android:layout_gravity="center_horizontal"
                 tools:text="sample name" />
 
             <TextView
