--- a/feature/summary/summary-ui/src/main/res/layout/fragment_summary.xml
+++ b/feature/summary/summary-ui/src/main/res/layout/fragment_summary.xml
@@ -13,9 +13,9 @@
 
     <TextView
         android:id="@+id/totalMoviesAmountTv"
-        android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:text="@string/total_movies"
         android:textColor="@android:color/white" />
 
@@ -39,4 +39,9 @@
         android:layout_height="wrap_content"
         android:text="@string/total_games"
         android:textColor="@android:color/white" />
+
+    <com.github.mikephil.charting.charts.PieChart
+        android:id="@+id/entityRatioChart"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </LinearLayout>
