--- a/feature/summary/summary-ui/src/main/res/layout/fragment_summary.xml
+++ b/feature/summary/summary-ui/src/main/res/layout/fragment_summary.xml
@@ -1,47 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.github.mikephil.charting.charts.PieChart xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/entityRatioChart"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <TextView
-        android:id="@+id/totalEntriesAmountTv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/total_entries"
-        android:textColor="@android:color/white" />
-
-    <TextView
-        android:id="@+id/totalMoviesAmountTv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="@string/total_movies"
-        android:textColor="@android:color/white" />
-
-    <TextView
-        android:id="@+id/totalDocumentariesAmountTv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/total_documentaries"
-        android:textColor="@android:color/white" />
-
-    <TextView
-        android:id="@+id/totalBooksAmountTv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/total_books"
-        android:textColor="@android:color/white" />
-
-    <TextView
-        android:id="@+id/totalGamesAmountTv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/total_games"
-        android:textColor="@android:color/white" />
-
-    <com.github.mikephil.charting.charts.PieChart
-        android:id="@+id/entityRatioChart"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-</LinearLayout>
+    android:layout_height="match_parent" />
