Render different states of database counting

--- a/feature/summary/summary-ui/src/main/res/layout/fragment_summary.xml
+++ b/feature/summary/summary-ui/src/main/res/layout/fragment_summary.xml
@@ -1,5 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.github.mikephil.charting.charts.PieChart xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/entityRatioChart"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_height="match_parent">
+
+    <com.github.mikephil.charting.charts.PieChart
+        android:id="@+id/entityRatioChart"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <TextView
+        android:id="@+id/noDataTv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone"
+        android:text="@string/no_data_found"/>
+</FrameLayout>
