--- a/feature/entity-list/list-ui/src/main/res/layout/entry_row_item.xml
+++ b/feature/entity-list/list-ui/src/main/res/layout/entry_row_item.xml
@@ -30,11 +30,19 @@
                 android:textSize="18sp"
                 tools:text="sample name" />
 
-            <TextView
-                android:id="@+id/entryDescriptionTv"
-                android:layout_width="wrap_content"
+            <net.cachapa.expandablelayout.ExpandableLayout
+                android:id="@+id/expandableLayout"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:text="sample description\nsample description\nsample description" />
+                app:el_duration="300"
+                app:el_expanded="false">
+
+                <TextView
+                    android:id="@+id/entryDescriptionTv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="sample description\nsample description\nsample description" />
+            </net.cachapa.expandablelayout.ExpandableLayout>
 
             <TextView
                 android:id="@+id/entryGenresTv"
