--- a/feature/entity-list/list-ui/src/main/res/layout/entry_row_item.xml
+++ b/feature/entity-list/list-ui/src/main/res/layout/entry_row_item.xml
@@ -45,6 +45,12 @@
             </net.cachapa.expandablelayout.ExpandableLayout>
 
             <TextView
+                android:id="@+id/yearTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="Year: 1999" />
+
+            <TextView
                 android:id="@+id/entryGenresTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
