--- a/feature/entity-list/list-ui/src/main/res/layout/fragment_category.xml
+++ b/feature/entity-list/list-ui/src/main/res/layout/fragment_category.xml
@@ -5,14 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    tools:context="dev.liinahamari.list_ui.MainActivity">
+    tools:context="dev.liinahamari.list_ui.activities.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/black"
         android:orientation="vertical"
-        tools:context="dev.liinahamari.list_ui.MainActivity">
+        tools:context="dev.liinahamari.list_ui.activities.MainActivity">
 
         <androidx.appcompat.widget.SearchView
             android:id="@+id/searchView"
