--- a/feature/entity-list/list-ui/src/main/res/layout/fragment_entries.xml
+++ b/feature/entity-list/list-ui/src/main/res/layout/fragment_entries.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    tools:context="dev.liinahamari.list_ui.MainActivity">
+    tools:context="dev.liinahamari.list_ui.activities.MainActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/entityButtonRv"
