Refactor: add generic "add entry" DialogFragment

--- a/feature/entity-list/list-ui/src/main/res/layout/fragment_add_book.xml
+++ b/feature/entity-list/list-ui/src/main/res/layout/fragment_add_book.xml
@@ -23,6 +23,25 @@
     </dev.liinahamari.suggestions_ui.book.SearchBookAutoCompleteTextView>
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/authorEtContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:hint="@string/author"
+        android:paddingStart="4dp"
+        android:paddingEnd="4dp"
+        app:endIconMode="clear_text"
+        app:hintAnimationEnabled="true"
+        app:hintEnabled="true">
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/authorEt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textCapWords" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
