--- a/feature/entity-list/list-ui/src/main/res/layout/button_item.xml
+++ b/feature/entity-list/list-ui/src/main/res/layout/button_item.xml
@@ -4,4 +4,6 @@
     android:id="@+id/entryBtn"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginStart="10dp"
+    android:layout_marginEnd="10dp"
     app:cornerRadius="3dp" />
