--- a/feature/entity-list/list-ui/src/main/res/layout/fragment_entries.xml
+++ b/feature/entity-list/list-ui/src/main/res/layout/fragment_entries.xml
@@ -11,6 +11,7 @@
         android:id="@+id/entityButtonRv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="5dp"
         android:background="@color/black"
         android:layoutAnimation="@anim/layout_animation_fall_down"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
