--- a/feature/entity-list/list-ui/src/main/res/layout/entry_row_item.xml
+++ b/feature/entity-list/list-ui/src/main/res/layout/entry_row_item.xml
@@ -4,14 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="4dp"
-    app:cardBackgroundColor="@color/cardview_dark_background"
     app:cardCornerRadius="4dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:background="@drawable/entities_selector"
+        android:padding="10dp"
         android:orientation="horizontal">
 
         <LinearLayout
