--- a/feature/entity-list/list-ui/src/main/res/menu/bunch_entities_actions.xml
+++ b/feature/entity-list/list-ui/src/main/res/menu/bunch_entities_actions.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:title="@string/delete"
+    <item
         android:id="@+id/delete"
-        android:visible="false"
-        app:showAsAction="always"
-        android:icon="@drawable/baseline_delete_24"/>
+        android:icon="@drawable/baseline_delete_24"
+        android:title="@string/delete"
+        android:visible="true"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/moveTo"
+        android:icon="@drawable/cascade_ic_round_arrow_right_24"
+        android:title="@string/move_to"
+        android:visible="true"
+        app:showAsAction="ifRoom" />
 </menu>
