#7 Feature: filter by country

--- a/feature/entity-list/list-ui/src/main/res/menu/bunch_entities_actions.xml
+++ b/feature/entity-list/list-ui/src/main/res/menu/bunch_entities_actions.xml
@@ -13,4 +13,10 @@
         android:title="@string/move_to"
         android:visible="true"
         app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/filter"
+        android:icon="@drawable/filter"
+        android:title="@string/move_to"
+        android:visible="true"
+        app:showAsAction="ifRoom" />
 </menu>
