--- a/feature/entity-list/list-ui/src/main/res/xml/settings_preferences.xml
+++ b/feature/entity-list/list-ui/src/main/res/xml/settings_preferences.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <PreferenceCategory
-        app:iconSpaceReserved="false">
-<!--        android:title="@string/title_other"-->
+    <PreferenceCategory app:iconSpaceReserved="false">
 
         <SwitchPreferenceCompat
+            android:key="@string/pref_enable_suggestions"
             android:title="@string/title_enable_suggestions"
-            app:defaultValue="true"
-            android:key="@string/pref_enable_suggestions" />
+            app:defaultValue="true" />
+
+        <Preference
+            android:key="@string/pref_clear_image_cache"
+            android:icon="@drawable/baseline_delete_sweep"
+            android:title="@string/clear_image_cache" />
     </PreferenceCategory>
 </PreferenceScreen>
