--- a/feature/entity-list/list-ui/src/main/res/menu/bunch_entities_actions.xml
+++ b/feature/entity-list/list-ui/src/main/res/menu/bunch_entities_actions.xml
@@ -14,9 +14,15 @@
         android:visible="true"
         app:showAsAction="ifRoom" />
     <item
+        android:id="@+id/share"
+        android:icon="@drawable/share"
+        android:title="@string/share_with"
+        android:visible="true"
+        app:showAsAction="always" />
+    <item
         android:id="@+id/filter"
         android:icon="@drawable/filter"
-        android:title="@string/move_to"
+        android:title="@string/filter"
         android:visible="true"
         app:showAsAction="ifRoom" />
 </menu>
