--- a/feature/settings/api/src/main/res/values/prefs.xml
+++ b/feature/settings/api/src/main/res/values/prefs.xml
@@ -1,4 +1,5 @@
 <resources tools:ignore="MissingTranslation" xmlns:tools="http://schemas.android.com/tools">
     <string name="pref_enable_suggestions">pref_enable_suggestions</string>
     <string name="pref_clear_image_cache">pref_clear_image_cache</string>
+    <string name="pref_leakcanary">pref_leakcanary</string>
 </resources>
