--- a/feature/settings/settings-ui/src/main/res/xml/settings_preferences.xml
+++ b/feature/settings/settings-ui/src/main/res/xml/settings_preferences.xml
@@ -2,11 +2,14 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <PreferenceCategory app:iconSpaceReserved="false">
-
         <SwitchPreferenceCompat
             android:key="@string/pref_enable_suggestions"
             android:title="@string/title_enable_suggestions"
             app:defaultValue="true" />
+
+        <SwitchPreferenceCompat
+            android:key="@string/pref_leakcanary"
+            android:title="@string/title_leak_canary_enabled" />
 
         <Preference
             android:key="@string/pref_clear_image_cache"
