--- a/feature/entity-list/list-ui/src/main/res/layout/entry_row_item.xml
+++ b/feature/entity-list/list-ui/src/main/res/layout/entry_row_item.xml
@@ -20,14 +20,17 @@
             android:layout_weight="0.9"
             android:orientation="vertical">
 
-            <TextView
+            <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/titleTv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="5dp"
                 android:textSize="18sp"
-                tools:text="sample name" />
+                android:singleLine="true"
+                android:ellipsize="marquee"
+                android:marqueeRepeatLimit ="marquee_forever"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:scrollHorizontally="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
             <net.cachapa.expandablelayout.ExpandableLayout
                 android:id="@+id/expandableLayout"
