--- a/feature/entity-list/list-ui/src/main/res/layout/fragment_add_game.xml
+++ b/feature/entity-list/list-ui/src/main/res/layout/fragment_add_game.xml
@@ -7,20 +7,37 @@
     android:orientation="vertical"
     android:padding="20dp">
 
-    <dev.liinahamari.suggestions_ui.game.SearchGameAutoCompleteTextView
-        android:id="@+id/titleEt"
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="15dp"
         android:hint="@string/name"
         android:paddingStart="4dp"
         android:paddingEnd="4dp"
+        android:textSize="20sp"
         app:endIconMode="clear_text"
         app:hintAnimationEnabled="true"
-        app:hintEnabled="true">
+        app:hintEnabled="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <requestFocus />
-    </dev.liinahamari.suggestions_ui.game.SearchGameAutoCompleteTextView>
+        <dev.liinahamari.suggestions_ui.game.SearchGameAutoCompleteTextView
+            android:id="@+id/titleEt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:inputType="text"
+            android:minHeight="51dp"
+            android:paddingStart="15dp"
+            android:paddingEnd="15dp">
+
+            <requestFocus />
+        </dev.liinahamari.suggestions_ui.game.SearchGameAutoCompleteTextView>
+    </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
