--- a/feature/suggestions/suggestions-ui/src/main/res/layout/suggestions_list_item.xml
+++ b/feature/suggestions/suggestions-ui/src/main/res/layout/suggestions_list_item.xml
@@ -8,64 +8,64 @@
     android:orientation="horizontal"
     tools:ignore="MissingDefaultResource">
 
-    <com.skydoves.androidveil.VeilLayout
-        android:id="@+id/veilLayout"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:veilLayout_baseAlpha="0.6"
-        app:veilLayout_baseColor="@android:color/black"
-        app:veilLayout_dropOff="0.5"
-        app:veilLayout_highlightAlpha="1.0"
-        app:veilLayout_highlightColor="@android:color/holo_green_light"
-        app:veilLayout_radius="6dp"
-        app:veilLayout_shimmerEnable="true"
-        app:veilLayout_veiled="true">
+        android:layout_height="wrap_content">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <com.skydoves.androidveil.VeilLayout
+            android:id="@+id/veilLayout"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:veilLayout_baseAlpha="0.6"
+            app:veilLayout_baseColor="@android:color/black"
+            app:veilLayout_dropOff="0.5"
+            app:veilLayout_highlightAlpha="1.0"
+            app:veilLayout_highlightColor="@android:color/holo_green_light"
+            app:veilLayout_radius="6dp"
+            app:veilLayout_shimmerEnable="true"
+            app:veilLayout_veiled="true">
 
             <ImageView
                 android:id="@+id/thumbnail"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:layout_margin="10dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:layout_margin="10dp" />
+        </com.skydoves.androidveil.VeilLayout>
 
-            <LinearLayout
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/veilLayout"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:id="@+id/titleTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@id/thumbnail"
-                app:layout_constraintTop_toTopOf="parent">
+                android:layout_gravity="start"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textSize="20sp" />
 
-                <TextView
-                    android:id="@+id/titleTv"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="start"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:textSize="20sp" />
+            <TextView
+                android:id="@+id/yearTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textSize="16sp" />
 
-                <TextView
-                    android:id="@+id/yearTv"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="start"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:textSize="16sp" />
-
-                <TextView
-                    android:id="@+id/genresTv"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="start"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:textSize="16sp" />
-            </LinearLayout>
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </com.skydoves.androidveil.VeilLayout>
+            <TextView
+                android:id="@+id/genresTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textSize="16sp" />
+        </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
