Add text scrolling on space exceed in suggestion title

--- a/feature/suggestions/suggestions-ui/src/main/res/layout/suggestions_list_item.xml
+++ b/feature/suggestions/suggestions-ui/src/main/res/layout/suggestions_list_item.xml
@@ -36,7 +36,7 @@
         </com.skydoves.androidveil.VeilLayout>
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -48,6 +48,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
+                android:ellipsize="marquee"
+                android:singleLine="true"
+                android:maxLines="1"
+                android:marqueeRepeatLimit="marquee_forever"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textSize="20sp" />
 
